Class.newInstance() is deprecated since Java 1.9